...
                app:layout_constraintTop_toTopOf="@+id/search_background"
                app:layout_constraintVertical_bias="1.0"
                app:tint="@color/dark_gray"
                android:contentDescription="@string/search_img" />

            <EditText
                android:id="@+id/search_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/input_text"
                android:backgroundTint="@color/transparent"
...
                app:layout_constraintEnd_toEndOf="@+id/search_background"
                app:layout_constraintStart_toEndOf="@+id/search_img"
                app:layout_constraintTop_toTopOf="@+id/search_background"
                android:autofillHints="no" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/result_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
